--- a/inventorymvp/templates/form/form.html
+++ b/inventorymvp/templates/form/form.html
@@ -24,7 +24,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-12 col-md-7 col-lg-6 order-md-1 aos-init aos-animate">
-                    <h1 class="display-3 text-center text-md-left">Bienvenido a <span class="cactus">Cactus</span> Inventory</h1>
+                    <h1 class="display-3 text-center text-md-left">Bienvenido a <span class="cactus">StockApp</span></h1>  <small>by <span class="cactus">Cactus</span> </small>
                     <p class="lead text-center text-md-left text-muted mb-6 mb-lg-8">
                         Predecimos tu demanda futura para que te enfoques en los productos que más y mejor se venden.
                     </p>
@@ -33,7 +33,7 @@
                     </div>-->
                 </div>
                 <div class="col-12 col-md-7 col-lg-6 order-md-1 aos-init aos-animate" data-aos="fade-up">   
-                    
+                    {% if not has_submitted %}
                         <form class="card" method="post" enctype="multipart/form-data">
                             <div class="card-body">
                                 {% csrf_token %}
@@ -45,6 +45,18 @@
                                 <button class="btn btn-primary" type="submit">Enviar</button>
                             </div>
                         </form>
+                    {% else %}
+                        <div class="card">
+                            <div class="card-header">
+                                <h4>Gracias, {{ user.name }}!</h4>
+                            </div>
+                            <div class="card-body">
+                            <h5 class="card-title">Datos guardados correctamente.</h5>
+                            <p class="card-text">Estaremos en contacto via correo electronico pronto. {{ file_name }}</p>
+                            <a href="/form" class="btn btn-primary">Subir otro archivo</a>
+                            </div>
+                        </div>
+                    {% endif %}
                     
                 </div>
             </div>
@@ -106,7 +118,7 @@
                     </div>
                     <h3>Resultados en Excel</h3>
                     <p class="text-muted mb-6 mb-md-0">
-                        El algoritmo toma un tiempo en ejecutarse. Una vez que termine de ejecutarse,
+                        El algoritmo toma un tiempo en ejecutarse. Una vez que termine,
                         te enviaremos un correo electronico con el resultado.
                     </p>
                 </div>
