--- a/inventorymvp/templates/form/form.html
+++ b/inventorymvp/templates/form/form.html
@@ -24,13 +24,12 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-12 col-md-7 col-lg-6 order-md-1 aos-init aos-animate">
-                    <h1 class="display-3 text-center text-md-left">Bienvenido a <span class="cactus">StockApp</span></h1>  <small>by <span class="cactus">Cactus</span> </small>
+                    <h1 class="display-3 text-center text-md-left">Bienvenido a <span class="cactus">StockApp</span></h1>  
+                    <small>by <span class="cactus">Cactus</span> </small>
+                    <br><br>
                     <p class="lead text-center text-md-left text-muted mb-6 mb-lg-8">
                         Predecimos tu demanda futura para que te enfoques en los productos que más y mejor se venden.
                     </p>
-                    <!--<div class="text-center text-md-left">
-                        <a class="btn btn-primary shadow lift mr-1"> Click Aquí</a>
-                    </div>-->
                 </div>
                 <div class="col-12 col-md-7 col-lg-6 order-md-1 aos-init aos-animate" data-aos="fade-up">   
                     {% if not has_submitted %}
