added google cloud storage support to store files

--- a/inventorymvp/templates/form/form.html
+++ b/inventorymvp/templates/form/form.html
@@ -52,7 +52,7 @@
                             <div class="card-body">
                             <h5 class="card-title">Datos guardados correctamente.</h5>
                             <p class="card-text">Estaremos en contacto via correo electronico pronto. {{ file_name }}</p>
-                            <a href="/form" class="btn btn-primary">Subir otro archivo</a>
+                            <a href="/welcome" class="btn btn-primary">Subir otro archivo</a>
                             </div>
                         </div>
                     {% endif %}
