--- a/inventorymvp/templates/form/form.html
+++ b/inventorymvp/templates/form/form.html
@@ -32,9 +32,21 @@
                     </p>
                 </div>
                 <div class="col-12 col-md-7 col-lg-6 order-md-1 aos-init aos-animate" data-aos="fade-up">   
-                    {% if not has_submitted %}
+                    {% if user is None %}
+                        <div class="card">
+                            <div class="card-header">
+                                <h4>Usuario no definido :(</h4>
+                            </div>
+                            <div class="card-body">
+                            <h5 class="card-title">Intente nuevamente</h5>
+                            
+                            <a href="/welcome" class="btn btn-primary">Intentar de nuevo</a>
+                            </div>
+                        </div>
+                    {% elif not has_submitted %}
                         <form class="card" method="post" enctype="multipart/form-data">
                             <div class="card-body">
+                                <h4 class="card-title">¡Inscribete y prueba gratuitamente!</h4>
                                 {% csrf_token %}
                                 {% block content %}
                                     <div class="form-group">
@@ -84,7 +96,7 @@
                     </div>
                     <h3>Sube tus datos de ventas</h3>
                     <p class="text-muted mb-6 mb-md-0">
-                        Sube tu base historica de ventas. Necesitamos la fecha de la transacción, el código de producto y 
+                        Sube tu base histórica de ventas. Necesitamos la fecha de la transacción, el código de producto y 
                         la cantidad vendida. Dos años de historia es lo recomendado.
                     </p>
                 </div>
@@ -95,7 +107,7 @@
                     </div>
                     <h3>Inteligencia Artificial</h3>
                     <p class="text-muted mb-6 mb-md-0">
-                        Nuestro algorítmo automáticamente analiza tu data historica y arroja una estimación de tus ventas futuras
+                        Nuestro algorítmo automáticamente analiza tu data histórica y arroja una estimación de tus ventas futuras
                         basado en temporadas y ventas historicas.
                     </p>
                 </div>
