--- a/inventorymvp/templates/form/field_selection.html
+++ b/inventorymvp/templates/form/field_selection.html
@@ -23,7 +23,7 @@
     <section class="pt-4 pt-md-11">
        <div class="container">
            <h1 class="">Seleccione los campos correspondientes</h1>
-           <p>Para poder modelar correctamente la data, necesitamos que se configuren correctamente los campos del archivo enviado. Necesitamos que hagas match para los siguientes campos: Fecha, Código de producto y SKU.</p>
+           <p>Para poder modelar correctamente la data, necesitamos que se configuren correctamente los campos del archivo enviado. Tienes que hacer match en los siguientes cambios: Fecha, Código de producto y Cantidad de unidades vendidas. El campo de fecha debe ser a nivel de día por lo menos (si está por hora, minutos o segundo no hay problema).</p>
            <br><br><br><br>
            <form class="card" method="post" enctype="multipart/form-data">
             <div class="card-body">
