fixed welcome page

--- a/inventorymvp/templates/form/form.html
+++ b/inventorymvp/templates/form/form.html
@@ -40,7 +40,7 @@
                             <div class="card-body">
                             <h5 class="card-title">Intente nuevamente</h5>
                             
-                            <a href="/welcome" class="btn btn-primary">Intentar de nuevo</a>
+                            <a href="" class="btn btn-primary">Intentar de nuevo</a>
                             </div>
                         </div>
                     {% elif not has_submitted %}
@@ -64,7 +64,7 @@
                             <div class="card-body">
                             <h5 class="card-title">Datos guardados correctamente.</h5>
                             <p class="card-text">Estaremos en contacto via correo electronico pronto. {{ file_name }}</p>
-                            <a href="/welcome" class="btn btn-primary">Subir otro archivo</a>
+                            <a href="" class="btn btn-primary">Subir otro archivo</a>
                             </div>
                         </div>
                     {% endif %}
