finnal changes to front

--- a/inventorymvp/templates/404.html
+++ b/inventorymvp/templates/404.html
@@ -22,8 +22,11 @@
     <br><br><br>
     <section class="pt-4 pt-md-11">
        <div class="container">
-           <h1 class="">404 Page Not Found</h1>
-           <p>Parece que te perdiste, <a href="/">click aqui</a> para volver al inicio</p>
+       <div class="jumbotron">
+           <h1 class="display-4">404 Page Not Found</h1>
+            <p class="lead">Parece que te perdiste, click en volver para regresar al inicio</p>
+            <a class="btn btn-primary" href="/" role="button">Volver</a>
+        </div>
            <br><br><br><br>
             </div>
         </form>
