--- a/inventorymvp/templates/form/form.html
+++ b/inventorymvp/templates/form/form.html
@@ -25,7 +25,7 @@
             <div class="row align-items-center">
                 <div class="col-12 col-md-7 col-lg-6 order-md-1 aos-init aos-animate">
                     <h1 class="display-3 text-center text-md-left">Bienvenido a <span class="cactus">StockApp</span></h1>  
-                    <small>by <span class="cactus">Cactus</span> </small>
+                    <medium>by <span class="cactus">CactusCo</span> </medium>
                     <br><br>
                     <p class="lead text-center text-md-left text-muted mb-6 mb-lg-8">
                         Predecimos tu demanda futura para que te enfoques en los productos que más y mejor se venden.
