--- a/landing/templates/landing.html
+++ b/landing/templates/landing.html
@@ -94,7 +94,7 @@
                     <h3>Data Science as a Service</h3>
                     <p class="text-muted mb-6 mb-md-0">
                         Sabemos que el mundo de la estadística y programación es complejo, 
-                        agar a un data scientists es caro y manejar un equipo técnico puede ser muy desafiante,
+                        pagar a un data scientists es caro y manejar un equipo técnico puede ser muy desafiante,
                         nuestra plataforma soluciona todo lo anterior.
                     </p>
                 </div>
