--- a/landing/templates/landing.html
+++ b/landing/templates/landing.html
@@ -50,19 +50,26 @@
                     {% if has_submitted %}
                     <h3>¡Gracias! Estaremos en contacto pronto.</h3>
                     {% else %}
+                    <div class="row">
                     <form method="post" enctype="multipart/form-data">
-                        <div class="form-group">
-                            <div class="row">
                                 {% csrf_token %}
-                                <div class="col">
-                                    {{ form.subject.errors }}
-                                    <!-- <label for="{{ form.subject.id_for_label }}">Email subject:</label> -->
-                                    {{ form.email }}
-                                    <button class="btn btn-primary" type="submit">Quiero que me contacten</button>
+                                {{ form.subject.errors }}
+                                <!-- <label for="{{ form.subject.id_for_label }}">Email subject:</label> -->
+                                <div class="form-row">
+                                    <div class="form-group col-md-6">
+                                        {{ form.name }}
+                                    </div>
+                                    <div class="form-group col-md-6">
+                                        {{ form.company }}
+                                    </div>
                                 </div>
-                            </div>
-                        </div>
-                    {% endif %}                     
+                                <div class="form-group">
+                                    {{ form.email }}
+                                </div>
+                                <button class="btn btn-primary" type="submit">Quiero que me contacten</button>
+                        </form>
+                    </div>
+                        {% endif %}                     
                 </div>
                 <div class="col-12 col-md-7 col-lg-6 order-md-1 aos-init aos-animate" data-aos="fade-up">   
                     {% include 'cactus.svg' %}
