--- a/stockapp/templates/form/form.html
+++ b/stockapp/templates/form/form.html
@@ -1,24 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StockApp</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+{% extends 'main.html' %}
 
-    <style>
-        body {
-            font-family: HKGroteskPro,serif;
-        }
-        .cactus {color:green;}
-        .btn-primary {
-            background-color:green;
-            border-color:green;}
-    </style>
-    
-</head>
-<body style="padding: 40px;" enctype="multipart/form-data">
+{% block content %}
     <br><br><br>
     <section class="pt-4 pt-md-11">
         <div class="container">
@@ -48,11 +30,30 @@
                             <div class="card-body">
                                 <h4 class="card-title">¡Inscríbete y prueba gratuitamente!</h4>
                                 {% csrf_token %}
-                                {% block content %}
-                                    <div class="form-group">
-                                    {{ form }}
+                                <div class="form-row">
+                                    <div class="form-group col-md-6">
+                                        {{ form.name }}
                                     </div>
-                                {% endblock %}
+                                    <div class="form-group col-md-6">
+                                        {{ form.last_name }}
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    {{ form.email }}
+                                </div>
+                                <div class="form-group">
+                                    {{ form.phone }}
+                                </div>
+                                <div class="form-group">
+                                    {{ form.company }}
+                                </div>
+                                <div class="form-group">
+                                    {{ form.document }}
+                                </div>
+                                <div class="form-group">
+                                    {{ form.recieve_info_flag }}
+                                </div>
+
                                 <button class="btn btn-primary" type="submit">Enviar</button>
                             </div>
                         </form>
@@ -137,6 +138,4 @@
             </div>
         </div>
     </section>
-    
-</body>
-</html>
+{% endblock %}
