--- a/landing/templates/main.html
+++ b/landing/templates/main.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -31,7 +33,10 @@
     
 </head>
 <body>
-
+    
+    {% block header %}
+    {% endblock %}
+    
     {% block content %}
     {% endblock %}
     
