--- a/stockapp/templates/form/form.html
+++ b/stockapp/templates/form/form.html
@@ -26,17 +26,17 @@
                             </div>
                         </div>
                     {% elif not has_submitted %}
-                        <form class="card" method="post" enctype="multipart/form-data">
-                            <div class="card-body">
-                                <h4 class="card-title">¡Inscríbete y prueba gratuitamente!</h4>
+                        <form class="card" method="post" enctype="multipart/form-data" style="width: 24rem;">
+                            <h4 class="card-header">¡Inscríbete y prueba gratuitamente!</h4>
+                            <div class="card-body" >
                                 {% csrf_token %}
                                 <div class="form-row">
                                     <div class="form-group col-md-6">
                                         {{ form.name }}
                                     </div>
-                                    <div class="form-group col-md-6">
-                                        {{ form.last_name }}
-                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    {{ form.last_name }}
                                 </div>
                                 <div class="form-group">
                                     {{ form.email }}
