--- a/landing/templates/landing.html
+++ b/landing/templates/landing.html
@@ -1,189 +1,57 @@
-{% extends 'main.html' %}
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cactus Co.</title>   
 
-{% block content %}
-<section class="pt-4 pt-md-11">
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-12 col-md-7 col-lg-6 order-md-1 aos-init aos-animate" data-aos="fade-up">   
-                {% include 'cactus.svg' %}
-            </div>
-            <div class="col-12 col-md-7 col-lg-6 order-md-1 aos-init aos-animate">
-                <h1 class="display-3 text-center text-md-left"> Nunca fue tan fácil usar Inteligencia Artificial en tu negocio </h1>  
-                <br><br>
-                <h4 >
-                    Cactusco es tu equipo de data science on demand, nuestra plataforma funciona para todo tipo de negocios y problemas de forma rapida y fácil, puedes subir un archivo ecxel o conectarte a nuestra API para una mejor experiencia
-                </h4>
-                <br>
-                <br>
-                {% if has_submitted %}
-                <h3>¡Gracias! Estaremos en contacto pronto.</h3>
-                {% else %}
-                <div class="row">
-                <form method="post" enctype="multipart/form-data">
-                            {% csrf_token %}
-                            {{ form.subject.errors }}
-                            <!-- <label for="{{ form.subject.id_for_label }}">Email subject:</label> -->
-                            <div class="form-row">
-                                <div class="form-group">
-                                    {{ form.email }}
-                                </div>
-                                <button class="btn btn-primary" type="submit">Quiero que me contacten</button>
-                            </div>
-                            
-                    </form>
-                    
-                </div>
-                    {% endif %}                     
-            </div>
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
-        </div>
-    </div>
-</section>
-<br><br><br>
-<section class="py-8 py-md-11">
-    <div class="container aos-init aos-animate">
-        <h6>CARACTERISTICAS</h6>
-        <h2 class="text-center text-md-left"> Cactusco, our AI platform </h2>
-        <div class="row">
-            <div class="col-sm-4">
-              <div class="card">
-                <div class="card-body">
-                    <div class="icon text-primary mb-3">
-                        <svg height="24"  width="24" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">    
-                            <g>
-                                <g>
-                                    <path d="M380.032,133.472l-112-128C264.992,2.016,260.608,0,256,0c-4.608,0-8.992,2.016-12.032,5.472l-112,128
-                                        c-4.128,4.736-5.152,11.424-2.528,17.152C132.032,156.32,137.728,160,144,160h64v208c0,8.832,7.168,16,16,16h64
-                                        c8.832,0,16-7.168,16-16V160h64c6.272,0,11.968-3.648,14.56-9.376C385.152,144.896,384.192,138.176,380.032,133.472z"/>
-                                </g>
-                            </g>
-                            <g>
-                                <g>
-                                    <path d="M432,352v96H80v-96H16v128c0,17.696,14.336,32,32,32h416c17.696,0,32-14.304,32-32V352H432z"/>
-                                </g>
-                            </g>
-                        </svg> 
-                    </div>
-                  <h5 class="card-title">Data Science as a Service</h5>
-                  <p class="card-text">
-                    Sabemos que el mundo de la estadística y programación es complejo, 
-                    pagar a un data scientists es caro y manejar un equipo técnico puede ser muy desafiante,
-                    nuestra plataforma soluciona todo lo anterior.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-4">
-              <div class="card">
-                <div class="card-body">
-                    <div class="icon text-primary mb-3">
-                        <svg height="24" viewBox="0 0 435.646 435.646" width="24" xmlns="http://www.w3.org/2000/svg"><path d="m297.824219 112h-160c-14.355469.015625-25.984375 11.648438-26 26v160c.015625 14.351562 11.644531 25.984375 26 26h160c14.351562-.015625 25.984375-11.648438 26-26v-160c-.015625-14.351562-11.648438-25.984375-26-26zm14 186c-.011719 7.726562-6.273438 13.992188-14 14h-160c-7.730469-.007812-13.992188-6.273438-14-14v-160c.007812-7.730469 6.269531-13.992188 14-14h160c7.726562.007812 13.992187 6.269531 14 14zm0 0"/><path d="m317.824219 82h-200c-19.875.023438-35.980469 16.125-36 36v200c.019531 19.871094 16.125 35.976562 36 36h200c19.871093-.023438 35.976562-16.128906 36-36v-200c-.023438-19.875-16.128907-35.976562-36-36zm24 236c-.015625 13.25-10.753907 23.984375-24 24h-200c-13.25-.015625-23.984375-10.75-24-24v-200c.011719-13.25 10.75-23.984375 24-24h200c13.246093.015625 23.984375 10.75 24 24zm0 0"/><path d="m239.441406 373.644531c-3.316406 0-6 2.6875-6 6v50c0 3.316407 2.683594 6 6 6 3.3125 0 6-2.683593 6-6v-50c0-3.3125-2.6875-6-6-6zm0 0"/><path d="m196.207031 373.644531c-3.316406 0-6 2.6875-6 6v50c0 3.316407 2.683594 6 6 6 3.3125 0 6-2.683593 6-6v-50c0-3.3125-2.6875-6-6-6zm0 0"/><path d="m152.972656 373.644531c-3.3125 0-6 2.6875-6 6v50c0 3.316407 2.6875 6 6 6s6-2.683593 6-6v-50c0-3.3125-2.6875-6-6-6zm0 0"/><path d="m282.675781 373.644531c-3.316406 0-6 2.6875-6 6v50c0 3.316407 2.683594 6 6 6 3.3125 0 6-2.683593 6-6v-50c0-3.3125-2.6875-6-6-6zm0 0"/><path d="m202.207031 56v-50c0-3.3125-2.6875-6-6-6-3.316406 0-6 2.6875-6 6v50c0 3.3125 2.683594 6 6 6 3.3125 0 6-2.6875 6-6zm0 0"/><path d="m245.441406 56v-50c0-3.3125-2.6875-6-6-6-3.316406 0-6 2.6875-6 6v50c0 3.3125 2.683594 6 6 6 3.3125 0 6-2.6875 6-6zm0 0"/><path d="m288.675781 56v-50c0-3.3125-2.6875-6-6-6-3.316406 0-6 2.6875-6 6v50c0 3.3125 2.683594 6 6 6 3.3125 0 6-2.6875 6-6zm0 0"/><path d="m158.972656 56v-50c0-3.3125-2.6875-6-6-6s-6 2.6875-6 6v50c0 3.3125 2.6875 6 6 6s6-2.6875 6-6zm0 0"/><path d="m429.644531 190.207031h-50c-3.3125 0-6 2.683594-6 6 0 3.3125 2.6875 6 6 6h50c3.316407 0 6-2.6875 6-6 0-3.316406-2.683593-6-6-6zm0 0"/><path d="m429.644531 233.441406h-50c-3.3125 0-6 2.683594-6 6 0 3.3125 2.6875 6 6 6h50c3.316407 0 6-2.6875 6-6 0-3.316406-2.683593-6-6-6zm0 0"/><path d="m429.644531 276.675781h-50c-3.3125 0-6 2.683594-6 6 0 3.3125 2.6875 6 6 6h50c3.316407 0 6-2.6875 6-6 0-3.316406-2.683593-6-6-6zm0 0"/><path d="m429.644531 146.972656h-50c-3.3125 0-6 2.6875-6 6s2.6875 6 6 6h50c3.316407 0 6-2.6875 6-6s-2.683593-6-6-6zm0 0"/><path d="m56 233.441406h-50c-3.3125 0-6 2.683594-6 6 0 3.3125 2.6875 6 6 6h50c3.3125 0 6-2.6875 6-6 0-3.316406-2.6875-6-6-6zm0 0"/><path d="m56 190.207031h-50c-3.3125 0-6 2.683594-6 6 0 3.3125 2.6875 6 6 6h50c3.3125 0 6-2.6875 6-6 0-3.316406-2.6875-6-6-6zm0 0"/><path d="m56 146.972656h-50c-3.3125 0-6 2.6875-6 6s2.6875 6 6 6h50c3.3125 0 6-2.6875 6-6s-2.6875-6-6-6zm0 0"/><path d="m56 276.675781h-50c-3.3125 0-6 2.683594-6 6 0 3.3125 2.6875 6 6 6h50c3.3125 0 6-2.6875 6-6 0-3.316406-2.6875-6-6-6zm0 0"/><path d="m212.214844 175.28125c-.882813-2.640625-4.179688-3.960938-7.480469-3.960938s-6.492187 1.320313-7.371094 3.960938l-21.890625 71.277344c-.089844.324218-.125.660156-.109375.992187 0 2.859375 4.070313 4.839844 7.261719 4.839844 1.980469 0 3.519531-.660156 4.070312-2.421875l4.507813-15.617188h27.171875l4.507812 15.617188c.550782 1.761719 2.089844 2.421875 3.960938 2.421875 3.300781 0 7.371094-2.089844 7.371094-4.839844-.019532-.339843-.09375-.675781-.222656-.992187zm-18.480469 49.71875 11-37.730469 11 37.730469zm0 0"/><path d="m248.734375 171.980469c-2.859375 0-5.832031 1.097656-5.832031 3.738281v72.820312c0 2.53125 2.972656 3.851563 5.832031 3.851563 2.96875 0 5.828125-1.320313 5.828125-3.851563v-72.816406c0-2.644531-2.859375-3.742187-5.828125-3.742187zm0 0"/></svg>
-                    </div>
-                  <h5 class="card-title">Inteligencia Artificial</h5>
-                  <p class="card-text">Usamos algoritmos de Inteligencia artificial para solucionar problemas complejos, 
-                    no encontraste una solución a tu problema? contáctanos.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="card">
-                  <div class="card-body">
-                    <div class="icon text-primary mb-3">
-                        <svg height="24" width="24" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                                viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
-                            <g>
-                                <g>
-                                    <path d="M467,76H45C20.137,76,0,96.262,0,121v270c0,24.885,20.285,45,45,45h422c24.655,0,45-20.03,45-45V121
-                                        C512,96.306,491.943,76,467,76z M460.698,106c-9.194,9.145-167.415,166.533-172.878,171.967c-8.5,8.5-19.8,13.18-31.82,13.18
-                                        s-23.32-4.681-31.848-13.208C220.478,274.284,64.003,118.634,51.302,106H460.698z M30,384.894V127.125L159.638,256.08L30,384.894z
-                                        M51.321,406l129.587-128.763l22.059,21.943c14.166,14.166,33,21.967,53.033,21.967c20.033,0,38.867-7.801,53.005-21.939
-                                        l22.087-21.971L460.679,406H51.321z M482,384.894L352.362,256.08L482,127.125V384.894z"/>
-                                </g>
-                            </g>
-                        </svg>
-                    </div>
-                    <h5 class="card-title">Seguridad ante todo</h5>
-                    <p class="card-text">Los datos son tuyos y nadie de nuestro equipo tiene acceso, 
-                        se almacenan en Google Cloud Platform para entrenar los modelos 
-                        y son borrados luego de obtener el output.</p>
-                  </div>
-                </div>
-              </div>
-          </div>
-        </div>
-</section>
-<br><br><br>
-<!-- ======= Featured Services Section ======= -->
-<section id="featured-services" class="featured-services">
-    <div class="container">
-        <div class="jumbotron">
-        <h6 class="text-center text-md-left"> PRODUCTOS </h6>
-        <h2 class="text-center text-md-left"> Problemas complejos, soluciones sofisticadas </h2>
-    <div class="row">
-        <div class="col-sm-4">
-        <div class="card">
-            <div class="card-body">
-            <h5 class="card-title"><a href="">Product recommendations</a></h5>
-            <p class="card-text">Entendemos el comportamiento de tus clientes para poder recomendarle productos de su interés en emailings como en tu eCommerce, aumentando tus ventas en un 4% - 6%</p>
-        </div>
-        </div>
-        </div>
-        <div class="col-sm-4">
-            <div class="card">
-                <div class="card-body"> 
-            <h5 class="card-title"><a href="/stockapp/">Demand forecasting</a></h5>
-            <p class="card-text">Usamos tu data de ventas históricas para proyectar cuando venderas en el futuro y así programar ventas, evitar quiebres de stock y optimizar espacios</p>
-        </div>
-        </div>
-        </div>
-        <div class="col-sm-4">
-            <div class="card">
-                <div class="card-body">
-            <h5 class="card-title"><a href="">Producto 3</a></h5>
-            <p class="card-text">Descripción producto 3</p>
-        </div>
-        </div>
-        </div>
-    </div>
-    </div>
+    <!-- Vendor CSS Files -->
+    
+    <!-- Hello -->
+    <link rel="stylesheet" type="text/css" href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" type="text/css"  href="{% static 'vendor/icofont/icofont.min.css' %}">
+    <link rel="stylesheet" type="text/css"  href="{% static 'vendor/boxicons/css/boxicons.min.css' %}">
+    <link rel="stylesheet" type="text/css"  href="{% static 'vendor/venobox/venobox.css' %}">
+    <link rel="stylesheet" type="text/css"  href="{% static 'vendor/owl.carousel/assets/owl.carousel.min.css' %}">
 
-    </div>
-</section><!-- End Featured Services Section -->
-<br><br><br>
-<section class="pt-4 pt-md-11">
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-12 order-md-1 aos-init aos-animate">
-                <h3 class="text-center">Tienes algun problema que solucionar? Nos encantan los desafíos, contáctanos!</h3>  
-                <br>
-                <br>
-                {% if has_submitted %}
-                <h3>¡Gracias! Estaremos en contacto pronto.</h3>
-                {% else %}
-                <div class="row">
-                <form method="post" enctype="multipart/form-data">
-                            {% csrf_token %}
-                            {{ form.subject.errors }}
-                            <!-- <label for="{{ form.subject.id_for_label }}">Email subject:</label> -->
-                            <div class="form-row">
-                                <div class="form-group col-md-6">
-                                    {{ form.name }}
-                                </div>
-                            </div>
-                                <div class="form-group">
-                                    {{ form.company }}
-                                </div>
-                            
-                            <div class="form-group">
-                                {{ form.email }}
-                            </div>
-                            <button class="btn btn-primary" type="submit">Quiero que me contacten</button>
-                    </form>
-                </div>
-                    {% endif %}                     
-            </div>
+    <!-- Template Main CSS File -->
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
 
-        </div>
-    </div>
-</section>
-<br><br><br>
-{% endblock %}
+   
+</head>
+<body>
+    
+    {% include "header.html" %}
+
+    {% include "sections/hero.html" %}
+    {% include "sections/services.html" %}
+    <br><br>
+    {% include "sections/products.html" %}
+    {% include "sections/contact.html" %}
+
+    {% include "footer.html" %}
+
+    <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
+
+    <!-- Vendor JS Files -->
+    <script src="assets/vendor/jquery/jquery.min.js"></script>
+    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
+    <script src="assets/vendor/php-email-form/validate.js"></script>
+    <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
+    <script src="assets/vendor/counterup/counterup.min.js"></script>
+    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="assets/vendor/venobox/venobox.min.js"></script>
+    <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
+
+    <!-- Template Main JS File -->
+    <script src="assets/js/main.js"></script>
+</body>
+
+
+</html>
+
