--- a/stockapp/templates/main.html
+++ b/stockapp/templates/main.html
@@ -1,41 +1,53 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cactus Co.</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <title>Cactus Co.</title>   
 
-    <style>
-        body {
-            font-family: HKGroteskPro,serif;
-            background-color: #F8F9FA;
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
-        }
-        .cactus {color:green;}
-        .btn-primary {
-            background-color:green;
-            border-color:green;}
-
-        .btn,.form-control{display: inline-block; width: auto;}
-        .container {
-            max-width: 1400px;
-            
-        }
-        input, select, textarea {
-            max-width: 500px;
-        }
-
-    </style>
+    <!-- Vendor CSS Files -->
     
+    <!-- Hello -->
+    <link rel="stylesheet" type="text/css" href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" type="text/css"  href="{% static 'vendor/icofont/icofont.min.css' %}">
+    <link rel="stylesheet" type="text/css"  href="{% static 'vendor/boxicons/css/boxicons.min.css' %}">
+    <link rel="stylesheet" type="text/css"  href="{% static 'vendor/venobox/venobox.css' %}">
+    <link rel="stylesheet" type="text/css"  href="{% static 'vendor/owl.carousel/assets/owl.carousel.min.css' %}">
+
+    <!-- Template Main CSS File -->
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+
+   
 </head>
 <body>
+    
+    {% include "header.html" %}
 
     {% block content %}
     {% endblock %}
-    
+
+    {% include "footer.html" %}
+
+    <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
+
+    <!-- Vendor JS Files -->
+    <script src="assets/vendor/jquery/jquery.min.js"></script>
+    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
+    <script src="assets/vendor/php-email-form/validate.js"></script>
+    <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
+    <script src="assets/vendor/counterup/counterup.min.js"></script>
+    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="assets/vendor/venobox/venobox.min.js"></script>
+    <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
+
+    <!-- Template Main JS File -->
+    <script src="assets/js/main.js"></script>
 </body>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
 </html>
