--- a/landing/templates/sections/products.html
+++ b/landing/templates/sections/products.html
@@ -11,7 +11,7 @@
         <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
             <div class="icon-box">
                 <div class="icon"><i class="bx bxl-dribbble"></i></div>
-                <h4><a href="stockapp">Product recommendations</a></h4>
+                <h4><a href="">Product recommendations (soon)</a></h4>
                 <p>Entendemos el comportamiento de tus clientes para poder recomendarle productos de su interés en emailings como en tu eCommerce, aumentando tus ventas en un 4% - 6%</p>
 
             </div>
