added product countdown

--- a/landing/templates/sections/products.html
+++ b/landing/templates/sections/products.html
@@ -11,10 +11,9 @@
         <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
             <div class="icon-box">
                 <div class="icon"><i class="bx bxl-dribbble"></i></div>
-                <h4><a href="">Product recommendations <span class="soon">(soon)</span></a></h4>
+                <h4><a href="">Product recommendations <small class="soon"><div id="countdown"></div></small></a></h4>
                 <p>Entendemos el comportamiento de tus clientes para poder recomendarle productos de su interés en emailings como en tu eCommerce, aumentando tus ventas en un 4% - 6%</p>
-
-            </div>  
+            </div>
         </div>
         <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
             <div class="icon-box">
@@ -24,8 +23,6 @@
             </div>
         </div>
     </div>
-    </div>
-
     </div>
 </section>
 {% endblock %}
