--- a/landing/templates/landing.html
+++ b/landing/templates/landing.html
@@ -49,7 +49,10 @@
     <script src="{% static 'vendor/owl.carousel/owl.carousel.min.js' %}"></script>
 
     <!-- Template Main JS File -->
+
+    <script src="{% static 'js/jquery.countdown.js' %}"></script>    
     <script src="{% static 'js/main.js' %}"></script>
+
 </body>
 
 
