--- a/landing/templates/sections/products.html
+++ b/landing/templates/sections/products.html
@@ -3,22 +3,22 @@
 <section id="services" class="services section-bg">
     <div class="container">
         <div class="section-title">
-            <span>Servicios</span>
-            <h2>Servicios</h2>
+            <span>Productos</span>
+            <h2>Productos</h2>
             <p> Problemas complejos, soluciones sofisticadas </p>
         </div>
     <div class="row">
         <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
             <div class="icon-box">
                 <div class="icon"><i class="bx bxl-dribbble"></i></div>
-                <h4><a href="">Product recommendations <small class="soon"><div id="countdown"></div></small></a></h4>
-                <p>Entendemos el comportamiento de tus clientes para poder recomendarle productos de su interés en emailings como en tu eCommerce, aumentando tus ventas en un 4% - 6%</p>
+                <h4><a href="">Recomendación de Productos <small class="soon"><div id="countdown"></div></small></a></h4>
+                <p>Entendemos el comportamiento de tus clientes para poder recomendarle productos de su interés tanto en emailings como en tu eCommerce, aumentando tus ventas en un 4% - 6%</p>
             </div>
         </div>
         <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
             <div class="icon-box">
                 <div class="icon"><i class="bx bxl-dribbble"></i></div>
-                <h4><a href="">Demand forecasting <span class="soon">(soon)</span></a></h4>
+                <h4><a href="">Proyección de Demanda <span class="soon">(soon)</span></a></h4>
                 <p>Usamos tu data de ventas históricas para proyectar cuando venderas en el futuro y así programar ventas, evitar quiebres de stock y optimizar espacios</p>
             </div>
         </div>
