new landing page text proposal

--- a/landing/templates/landing.html
+++ b/landing/templates/landing.html
@@ -24,11 +24,10 @@
    
 </head>
 <body>
-    <br><br>
     {% include "header.html" %}
 
     {% include "sections/hero.html" %}
-    {% include "sections/services.html" %}
+    {% include "sections/how-it-works.html" %}
     <br><br>
     {% include "sections/products.html" %}
     {% include "sections/contact.html" %}
