--- a/landing/templates/sections/contact.html
+++ b/landing/templates/sections/contact.html
@@ -5,7 +5,7 @@
       <div class="section-title">
         <span>Contacto</span>
         <h2>Contacto</h2>
-        <p>¿Tienes algun problema que solucionar? Nos encantan los desafíos, contáctanos!</p>
+        <p>¡Hablemos! Sobre ti, tu empresa, nosotros, nuestros productos u otros problemas que quieras solucionar.</p>
       </div>
 
       <div class="row">
