--- a/landing/templates/sections/products.html
+++ b/landing/templates/sections/products.html
@@ -10,16 +10,17 @@
     <div class="row">
         <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
             <div class="icon-box">
-                <div class="icon"><i class="bx bxl-dribbble"></i></div>
-                <h4><a href="">Product recommendations <small class="soon"><div id="countdown"></div></small></a></h4>
-                <p>Entendemos el comportamiento de tus clientes para poder recomendarle productos de su interés en emailings como en tu eCommerce, aumentando tus ventas en un 4% - 6%</p>
+                <div class="icon"><i class="bx bxs-cart"></i></div>
+                <h4><a href="">Tailor<small class="soon"><div id="countdown"></div></small></a></h4>
+                <p>Entendemos el comportamiento de tus clientes para poder hacer recomendaciones significativas 4% - 6%</p>
             </div>
         </div>
         <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
             <div class="icon-box">
-                <div class="icon"><i class="bx bxl-dribbble"></i></div>
-                <h4><a href="">Demand forecasting <span class="soon">(soon)</span></a></h4>
-                <p>Usamos tu data de ventas históricas para proyectar cuando venderas en el futuro y así programar ventas, evitar quiebres de stock y optimizar espacios</p>
+                <div class="icon"><i class="bx bxs-spreadsheet"></i></div>
+                <h4><a href="">StockApp <br><small class="soon">(pronto)</small></a></h4>
+                <p>Optimizamos tus compras futuras analizando tu data historica de ventas.
+                    No más sobre stock ni dolores de cabeza  </p>
             </div>
         </div>
     </div>
