--- a/landing/templates/sections/hero.html
+++ b/landing/templates/sections/hero.html
@@ -4,18 +4,17 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
-                <h1> Nunca fue tan fácil usar Inteligencia Artificial en tu negocio </h1>  
+                <h1> Aumenta tus ventas con inteligencia artificial</h1>  
                 <h2 >
-                    Cactusco es tu equipo de data science on demand, nuestra plataforma funciona para todo tipo de negocios y problemas de forma rapida y fácil, puedes subir un archivo ecxel o conectarte a nuestra API para una mejor experiencia
+                    Conecta tu eCommerce a nuestra API para conocer a tus clientes y dar recomendaciones significativas.
                 </h2>
                 {% if has_submitted %}
                 <h2>¡Gracias! Estaremos en contacto pronto.</h2>
                 {% else %}
                 <div class="d-flex">
-                    <a href="#contact" class="btn-get-started scrollto">Comenzar</a>
+                    <a href="#contact" class="btn-get-started scrollto">Quiero saber más</a>
                     <!--<a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox btn-watch-video" data-vbtype="video" data-autoplay="true"> Watch Video <i class="icofont-play-alt-2"></i></a>-->
                 </div>
-
                     {% endif %}                     
             </div>
             <div class="col-lg-6 order-1 order-lg-2 hero-img">   
