--- a/landing/templates/sections/how-it-works.html
+++ b/landing/templates/sections/how-it-works.html
@@ -23,7 +23,7 @@
                 <div class="icon-box">
                     <div class="icon"><i class="bx bx-happy"></i></div>
                     <h5 class="title">Cliente feliz, eCommerce feliz</h5>
-                    <p class="description text-justify">Disfruta de recomendaciones personalizadas para tus clientes. </p>
+                    <p class="description text-justify">Te ayudamos a ayudar a tu cliente a encontrar ese producto que necesita.</p>
                 </div>
             </div>
         </div>
