updated landing text

--- a/landing/templates/sections/hero.html
+++ b/landing/templates/sections/hero.html
@@ -20,7 +20,10 @@
             <div class="col-lg-6 order-1 order-lg-2 hero-img">   
                 <img src="{% static 'img/cactus.svg' %}"  class="img-fluid animated" alt="">
             </div>
-
+            
+        </div>
+        <div class="row">
+            <!--<div id="countdown"></div>-->
         </div>
     </div>
 </section>
