--- a/landing/templates/sections/products.html
+++ b/landing/templates/sections/products.html
@@ -3,24 +3,31 @@
 <section id="services" class="services section-bg">
     <div class="container">
         <div class="section-title">
-            <span>Servicios</span>
-            <h2>Servicios</h2>
+            <span>Como Funciona</span>
+            <h2>Como Funciona</h2>
             <p> Problemas complejos, soluciones sofisticadas </p>
         </div>
     <div class="row">
-        <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="icon-box">
-                <div class="icon"><i class="bx bxs-cart"></i></div>
-                <h4><a href="">Tailor<small class="soon"><div id="countdown"></div></small></a></h4>
-                <p>Entendemos el comportamiento de tus clientes para poder hacer recomendaciones significativas 4% - 6%</p>
+                <div class="icon"><i class="bx bx-bot"></i></div>
+                <h4><a href="">Conecta tu eCommerce<small class="soon"></small></a></h4>
+                <p>Conecta tu eCommerce de forma segura. Nuestros robots leen tu data y aprenden de ella, 
+                    pero nadie en nuestro equipo puede ver tus transacciones.</p>
             </div>
         </div>
-        <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="icon-box">
-                <div class="icon"><i class="bx bxs-spreadsheet"></i></div>
-                <h4><a href="">StockApp <br><small class="soon">(pronto)</small></a></h4>
-                <p>Optimizamos tus compras futuras analizando tu data historica de ventas.
-                    No más sobre stock ni dolores de cabeza  </p>
+                <div class="icon"><i class="bx bx-network-chart"></i></div>
+                <h4><a href="">Configura tu página de recomendaciones <br></a></h4>
+                <p>Integramos tu plataforma para que en cada item subido al carrito aparezcan recomendaciones personalizadas. Tranquilo, esto lo hemos nosotros. ¡Es gratis!</p>
+            </div>
+        </div>
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+            <div class="icon-box">
+                <div class="icon"><i class="bx bx-happy"></i></div>
+                <h4><a href="">Cliente feliz, eCommerce feliz<br></a></h4>
+                <p>Te ayudamos a ayudar a tu cliente a encontrar ese producto que necesita.</p>
             </div>
         </div>
     </div>
