--- a/landing/templates/header.html
+++ b/landing/templates/header.html
@@ -10,7 +10,7 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="#hero">Home</a></li>
-          <li><a href="#services">Servicios</a></li>
+          <li><a href="#services">Como Funciona</a></li>
           <li><a href="#contact">Contacto</a></li>
 
         </ul>
