--- a/landing/templates/sections/contact.html
+++ b/landing/templates/sections/contact.html
@@ -5,7 +5,7 @@
       <div class="section-title">
         <span>Contacto</span>
         <h2>Contacto</h2>
-        <p>¡Hablemos! Sobre ti, tu empresa, nosotros, nuestros productos u otros problemas que quieras solucionar.</p>
+        <p>¡Hablemos! Sobre ti, tu empresa, nosotros, nuestros productos u otros problemas en los que te podamos ayudar.</p>
       </div>
 
       <div class="row">
@@ -20,15 +20,20 @@
               </div>
               -->
               <div class="email">
-                <i class="icofont-envelope"></i>
-                <h4>Email:</h4>
-                <p>contacto@cactusco.cl</p>
+                <a href="mailto:contacto@cactusco.cl?subject=Contacto Cactus Co">
+                  <i class="icofont-envelope"></i>
+                  <h4>Email:</h4>
+                  <p>contacto@cactusco.cl</p>
+                </a>
+                
               </div>
 
               <div class="phone">
-                <i class="icofont-phone"></i>
-                <h4>Llamar:</h4>
-                <p>+56 9 71412967</p>
+                <a href="tel:+56971412967">
+                  <i class="icofont-phone"></i>
+                  <h4>Llamar:</h4>
+                  <p>+56 9 71412967</p>
+                </a>
               </div>
               <!-- 
               <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
@@ -41,26 +46,28 @@
             {% csrf_token %}
             <div class="form-row">
               <div class="form-group col-md-6">
-                <label for="name">Tu Nombre</label>
                 {{ contactForm.name }}
                 <!--<input type="text" name="name" class="form-control" id="name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />-->
                 <div class="validate"></div>
               </div>
               <div class="form-group col-md-6">
-                <label for="name">Tu Email</label>
                 {{ contactForm.email }}
                 <!--<input type="email" class="form-control" name="email" id="email" data-rule="email" data-msg="Please enter a valid email" />-->
                 <div class="validate"></div>
               </div>
             </div>
             <div class="form-group">
-              <label for="name">Asunto</label>
-              {{ contactForm.subject }}
+              <div class="input-group">
+                <div class="input-group-prepend">
+                  <div class="input-group-text">+56</div>
+                </div>
+                {{ contactForm.phone }}
+              </div>
+              
               <!--<input type="text" class="form-control" name="subject" id="subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />-->
               <div class="validate"></div>
             </div>
             <div class="form-group">
-              <label for="name">Mensaje</label>
               {{ contactForm.message }}
               <!--<textarea class="form-control" name="message" rows="10" data-rule="required" data-msg="Please write something for us"></textarea>-->
               <div class="validate"></div>
