changed form handling in views.py

--- a/landing/templates/thanks.html
+++ b/landing/templates/thanks.html
@@ -4,7 +4,7 @@
 <section id="thanks">
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
-            <h1 class="display-4">¡Gracias por contactarnos!</h1>
+            <h1 class="display-4">{{ message }}</h1>
             <p class="lead">Alguien de nuestro equipo se contactara contigo lo antes posible.</p>
             <hr class="my-4">
             <p class="lead">
