changes texts on front page

--- a/landing/templates/sections/products.html
+++ b/landing/templates/sections/products.html
@@ -11,22 +11,22 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="icon-box">
                 <div class="icon"><i class="bx bx-bot"></i></div>
-                <h4><a href="">Conecta tu eCommerce<small class="soon"></small></a></h4>
-                <p>Conecta tu eCommerce de forma segura. Nuestros robots leen tu data y aprenden de ella, 
+                <h4><a href="">Tus datos, seguros.<small class="soon"></small></a></h4>
+                <p>Nuestros robots leen tu data y aprenden de ella, 
                     pero nadie en nuestro equipo puede ver tus transacciones.</p>
             </div>
         </div>
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="icon-box">
                 <div class="icon"><i class="bx bx-network-chart"></i></div>
-                <h4><a href="">Configura tu página de recomendaciones <br></a></h4>
-                <p>Integramos tu plataforma para que en cada item subido al carrito aparezcan recomendaciones personalizadas. Tranquilo, esto lo hemos nosotros. ¡Es gratis!</p>
+                <h4><a href="">A recomendar<br></a></h4>
+                <p>Integramos tu página con nuestra api de recomendaciones personalizadas.</p>
             </div>
         </div>
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="icon-box">
                 <div class="icon"><i class="bx bx-happy"></i></div>
-                <h4><a href="">Cliente feliz, eCommerce feliz<br></a></h4>
+                <h4><a href="">Cliente feliz<br></a></h4>
                 <p>Te ayudamos a ayudar a tu cliente a encontrar ese producto que necesita.</p>
             </div>
         </div>
