--- a/landing/templates/sections/hero.html
+++ b/landing/templates/sections/hero.html
@@ -5,9 +5,10 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
-                <h1> Aumenta tus ventas con inteligencia artificial</h1>  
+                <h1> Aumenta las ventas de tu eCommerce con Inteligencia Artificial</h1>  
                 <h2 >
-                    Conecta tu eCommerce a nuestra API para conocer a tus clientes y dar recomendaciones significativas.
+                    Nuestro algoritmo de inteligencia artificial aprende de tu data histórica para ofrecer 
+                    a tus clientes recomendaciones de productos generando un ingreso por venta extra.
                 </h2>
                 {% if has_submitted %}
                 <h2>¡Gracias! Estaremos en contacto pronto.</h2>
