added example to landing page plus WHY statement

--- a/landing/templates/landing.html
+++ b/landing/templates/landing.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 {% include "sections/hero.html" %}
+{% include "sections/example.html" %}
+{% include "sections/portfolio.html" %}
 {% include "sections/products.html" %}
 {% include "sections/contact.html" %}
 {% endblock %}
