--- a/landing/templates/sections/products.html
+++ b/landing/templates/sections/products.html
@@ -7,30 +7,31 @@
             <h2>Como Funciona</h2>
             <p> Problemas complejos, soluciones sofisticadas </p>
         </div>
-    <div class="row">
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-            <div class="icon-box">
-                <div class="icon"><i class="bx bx-bot"></i></div>
-                <h4><a href="">Tus datos, seguros.<small class="soon"></small></a></h4>
-                <p>Nuestros robots leen tu data y aprenden de ella, 
-                    pero nadie en nuestro equipo puede ver tus transacciones.</p>
+        <div class="row">    
+            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+                <div class="icon-box">
+                    <div class="icon"><i class="bx bx-bot"></i></div>
+                    <h4><a href="">Tus datos, seguros.<small class="soon"></small></a></h4>
+                    <p>Nuestros robots leen tu data y aprenden de ella, 
+                        pero nadie en nuestro equipo puede ver tus transacciones.</p>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+                <div class="icon-box">
+                    <div class="icon"><i class="bx bx-network-chart"></i></div>
+                    <h4><a href="">A recomendar<br></a></h4>
+                    <p>Integramos tu página con nuestra api de recomendaciones personalizadas.</p>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+                <div class="icon-box">
+                    <div class="icon"><i class="bx bx-happy"></i></div>
+                    <h4><a href="">Cliente feliz<br></a></h4>
+                    <p>Te ayudamos a ayudar a tu cliente a encontrar ese producto que necesita.</p>
+                </div>
             </div>
         </div>
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-            <div class="icon-box">
-                <div class="icon"><i class="bx bx-network-chart"></i></div>
-                <h4><a href="">A recomendar<br></a></h4>
-                <p>Integramos tu página con nuestra api de recomendaciones personalizadas.</p>
-            </div>
-        </div>
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-            <div class="icon-box">
-                <div class="icon"><i class="bx bx-happy"></i></div>
-                <h4><a href="">Cliente feliz<br></a></h4>
-                <p>Te ayudamos a ayudar a tu cliente a encontrar ese producto que necesita.</p>
-            </div>
-        </div>
-    </div>
+        
     </div>
 </section>
 {% endblock %}
