pr comments update

--- a/landing/templates/sections/example.html
+++ b/landing/templates/sections/example.html
@@ -15,14 +15,14 @@
                 <div class="icon"><i class="icofont-dollar"></i></div>
                     <h5 class="title">Aumenta tu ventas</h5>
                     <p  class="description text-justify">
-                    Los productos recomendados son una gran forma de aumentar tus ventas. Amazon ha reportado que un 35% de lo que los comnsumidores compran, es a travez de productos recomendados.</p>
+                    Los productos recomendados son una gran forma de aumentar tus ventas. Amazon ha reportado que un 35% de sus ventas vienen de productos recomendados.</p>
             </div>
             </div>
             <div class="col-sm-4 d-flex align-items-stretch">
               <div class="icon-box">
                     <div class="icon"><i class="icofont-ui-add"></i></div>
                     <h5 class="title">Ayuda a tus clientes</h5>
-                    <p  class="description text-justify">Es dificil para tus clientes encontrar lo que estan buscando entre tantos productos que tienes disponibles. Además, ¿Por que no sugerirle ese tornillito que se le olvido echar a la canasta?</p>
+                    <p  class="description text-justify">Es dificil para tus clientes encontrar lo que están buscando entre tantos productos que tienes disponibles. Además, ¿Por que no sugerirle ese tornillito que se le olvido echar a la canasta?</p>
                 </div>
             </div>
             <div class="col-sm-4 d-flex align-items-stretch">
