--- a/landing/templates/sections/portfolio.html
+++ b/landing/templates/sections/portfolio.html
@@ -1,24 +1,24 @@
 {% load static %}
 {% block portfolio %}
-<section id="portfolio" class="portfolio">
+<section id="portfolio" class="portfolio section-bg">
     <div class="container">
-    <!--
-      <div class="section-title">
-        <span>Portfolio</span>
-        <h2>Portfolio</h2>
-        <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
-      </div>
-      -->
+    
+    <div class="section-title">
+    <span>Ejemplo</span>
+    <h2>Ejemplo</h2>
+    <p>Pone el mouse sobre los productos y click en más para ver los recomendados de cada producto</p>
+    </div>
+    
 
       <div class="row portfolio-container">
         {% for prod in recommendedProducts %}
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
                 <img src="{% static prod.img_name %}" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                <h4>{{ prod.name }}</h4>
-                <p></p>
-                <a class="preview-link" data-toggle="collapse" href="#collapse{{ prod.code }}" role="button"   aria-expanded="false" aria-controls="collapse{{ prod.code }}" title="{{ prod.name }}"><i class="bx bx-plus"></i></a>
-                <!--<a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>-->
+                    <h4>{{ prod.name }}</h4>
+                    <p></p>
+                    <a class="preview-link" data-toggle="collapse" href="#collapse{{ prod.code }}" role="button"   aria-expanded="false" aria-controls="collapse{{ prod.code }}" title="{{ prod.name }}"><i class="bx bx-plus"></i></a>
+                    <!--<a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>-->
                 </div>
             </div>
         {% endfor %}
@@ -27,28 +27,54 @@
   </section><!-- End Portfolio Section -->
   
 {% for prod in recommendedProducts %}
-    <section class="collapse cta" id="collapse{{ prod.code }}">
+    <section class="portfolio collapse cta" id="collapse{{ prod.code }}">
         <div class="container">
-            <p class="ml-4">Productos similares</p>
+            <h4 class="row">Productos similares</h4>
             <div class="row">
-                {% for prod_rec in prod.recommended %}
-                    <div class="col-4 mt-4">
-                        <div class="card" style="width: 18rem; ">
-                            <div class="card-body">
-                            <h5 class="card-title">Producto {{ forloop.counter }}: <small> {% widthratio prod_rec.score 1 100 %} % match </small></h5>
-                            <h6 class="card-subtitle mb-2 text-muted">{{ prod_rec.name }}</h6>
-                            <!--<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="card-link">Card link</a>
-                            <a href="#" class="card-link">Another link</a>-->
-                            </div>
+                {% for prod_rec in prod.similar_products %} 
+                <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+                        <img src="{% static prod_rec.img_name %}" class="img-fluid" alt="">
+                        <div class="portfolio-info">
+                            <h4 class="card-title">Producto {{ forloop.counter }}: <small> {% widthratio prod_rec.score 1 100 %} % match </small></h4>
+                            <p class="card-subtitle mb-2 text-muted">{{ prod_rec.name }}</p>
                         </div>
-                    </div>
+                </div>
                 {% endfor %}
             </div>
-            <div class="col mt-4">
-                <h3 class="text-center">¡Nosotros te diremos que productos poner aquí!</h3> 
-            </div>
+            <h4 class="row mt-4">Productos complementarios</h4>
+            <div class="row">
+                {% for prod_rec in prod.related_products %}
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+                            <img src="{% static prod_rec.img_name %}" class="img-fluid" alt="">
+                            <div class="portfolio-info">
+                            <h4>Producto {{ forloop.counter }}: <small> {% widthratio prod_rec.score 1 100 %} % match </small></h4>
+                            <p>{{ prod_rec.name }}</p>
+                            </div>
+                    </div>
+                {% endfor %}
+            </div>    
         </div>
     </section>
 {% endfor %}
+<!--
+{% for prod in recommendedProducts %}
+    <section class="collapse cta" id="collapse{{ prod.code }}">
+        <div class="container">
+            <h4 class="row mt-4">Productos complementarios</h4>
+            <div class="row">
+                {% for prod_rec in prod.related_products %}
+                    <div class="col-4 mt-4 card">
+                            <img src="{% static prod_rec.img_name %}" class="card-img-top" alt="">
+                            <div class="card-body">
+                            <h5 class="card-title">Producto {{ forloop.counter }}: <small> {% widthratio prod_rec.score 1 100 %} % match </small></h5>
+                            <h6 class="card-subtitle mb-2 text-muted">{{ prod_rec.name }}</h6>
+                            </div>
+                    </div>
+                {% endfor %}
+            </div>    
+            <h3 class="text-center mt-4">¡Nosotros te diremos que productos poner aquí!</h3> 
+        </div>
+    </section>
+{% endfor %}
+-->
 {% endblock %}
