--- a/landing/templates/sections/portfolio.html
+++ b/landing/templates/sections/portfolio.html
@@ -17,7 +17,7 @@
                 <div class="portfolio-info">
                     <h4>{{ prod.name }}</h4>
                     <p></p>
-                    <a class="preview-link" data-toggle="collapse" href="#collapse{{ prod.code }}" role="button"   aria-expanded="false" aria-controls="collapse{{ prod.code }}" title="{{ prod.name }}"><i class="bx bx-plus"></i></a>
+                    <a id="heading{{ prod.code }}" class="preview-link" data-toggle="collapse" href="#collapse{{ prod.code }}" role="button" title="{{ prod.name }}"><i class="bx bx-plus"></i></a>
                     <!--<a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>-->
                 </div>
             </div>
@@ -27,7 +27,8 @@
   </section><!-- End Portfolio Section -->
   
 {% for prod in recommendedProducts %}
-    <section class="portfolio collapse cta" id="collapse{{ prod.code }}">
+<div id="show-products">
+    <div class="portfolio collapse cta" id="collapse{{ prod.code }}" aria-labelledby="heading{{ prod.code }}" aria-parent="#show-products">
         <div class="container">
             <h4 class="row">Productos similares</h4>
             <div class="row">
@@ -55,6 +56,7 @@
             </div>    
             <h3 class="text-center mt-4">¡Nosotros te diremos que productos poner aquí!</h3> 
         </div>
-    </section>
+    </div>
+</div>
 {% endfor %}
 {% endblock %}
