cambie font y color del header y hero, algunos textos del hero, agregue boton al header, atributos de cactus (pumenta tus ventas, ayuda a tus clientes, etc), titulos de secciones

--- a/landing/templates/sections/hero.html
+++ b/landing/templates/sections/hero.html
@@ -5,17 +5,20 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
-                <h1> Aumenta las ventas de tu eCommerce con Inteligencia Artificial</h1>  
-                <h2 >
-                    Nuestro algoritmo de inteligencia artificial aprende de tu data histórica para ofrecer 
-                    a tus clientes recomendaciones de productos generando un ingreso por venta extra.
-                </h2>
+                <h1 class="c-heading-1"> Vende más en tu eCommerce con 
+                    <span class="is--bold is--green c-heading-1">Inteligencia Artificial</span>
+                    <span class="c-heading-1 is--bold is--green"></span>
+                </h1> 
+                <p class="c-paragraph is--large"> Nuestro algoritmo aprende de tu data histórica para recomendar a tus clientes productos similares y complementarios generando un
+                    <span class="c-paragraph is--large is--bold">ingreso por venta extra.</span>
+                    <span class="is--bold is--large c-paragraph"></span>
+                </p>
                 {% if has_submitted %}
                 <h2>¡Gracias! Estaremos en contacto pronto.</h2>
                 {% else %}
                 <br>
                 <div class="d-flex">
-                    <a href="#contact" class="btn-get-started scrollto">Quiero saber más</a>
+                    <a href="#contact" class="btn-get-started scrollto">Habla con nuestro Equipo</a>
                     <!--<a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox btn-watch-video" data-vbtype="video" data-autoplay="true"> Watch Video <i class="icofont-play-alt-2"></i></a>-->
                 </div>
                     {% endif %}                     
