--- a/landing/templates/sections/portfolio.html
+++ b/landing/templates/sections/portfolio.html
@@ -4,8 +4,7 @@
     <div class="container">
     
     <div class="section-title">
-    <span>Ejemplo</span>
-    <h2>Ejemplo</h2>
+    <h2 class="c-heading-2">Ejemplo</h2>
     <p>Pone el mouse sobre los productos y click en más para ver los recomendados de cada producto</p>
     </div>
     
