--- a/landing/templates/header.html
+++ b/landing/templates/header.html
@@ -9,10 +9,9 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="active"><a href="#hero">Home</a></li>
+          <li><a href="#hero">Inicio</a></li>
           <li><a href="#services">Como Funciona</a></li>
-          <li><a href="#contact">Contacto</a></li>
-
+          <li><a href="#contact" class="c-button__secondary">Contáctanos</a></li>
         </ul>
       </nav><!-- .nav-menu -->
 
