--- a/landing/templates/sections/contact.html
+++ b/landing/templates/sections/contact.html
@@ -3,8 +3,7 @@
 <section id="contact" class="contact">
     <div class="container">
       <div class="section-title">
-        <span>Contacto</span>
-        <h2>Contacto</h2>
+        <h2 class="c-heading-2">Contacto</h2>
         <p>¿Interesado? ¡Contactanos!</p>
       </div>
 
