--- a/landing/templates/sections/example.html
+++ b/landing/templates/sections/example.html
@@ -5,9 +5,7 @@
     
     <div class="container">
         <div class="section-title">
-            <span>¿Por qué recomendar productos?</span>
-            <h2>¿Por qué recomendar productos?</h2>
-            <p> Aumenta tus ventas </p>
+            <h2 class="c-heading-2">¿Por qué recomendar productos?</h2>
         </div>        
         <div class="row">
             <div  class="col-lg-4 col-md-6 d-flex align-items-stretch">
@@ -15,7 +13,7 @@
                 <div class="icon"><i class="icofont-dollar"></i></div>
                     <h5 class="title">Aumenta tu ventas</h5>
                     <p  class="description text-justify">
-                    Los productos recomendados son una gran forma de aumentar tus ventas. Amazon ha reportado que un 35% de sus ventas vienen de productos recomendados.</p>
+                    Los productos recomendados son una gran forma de aumentar tus ventas. Amazon ha reportado que hasta un 35% de sus ventas vienen de productos recomendados.</p>
             </div>
             </div>
             <div class="col-sm-4 d-flex align-items-stretch">
