--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,7 +9,7 @@
 # General
 --------------------------------------------------------------*/
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Inter", sans-serif;
   color: #444444;
 }
 
@@ -23,7 +23,7 @@ a:hover {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Raleway", sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 /*--------------------------------------------------------------
@@ -75,17 +75,46 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0;
   padding: 0;
   line-height: 1;
-  font-weight: 700;
+  font-weight: 400;
   letter-spacing: 0.5px;
 }
 
 #header .logo a {
-  color: #5f687b;
+  color: #000;
 }
 
 #header .logo img {
   max-height: 40px;
 }
+
+
+
+#header .c-button__secondary {
+  display: inline-block;
+  width: auto;
+  min-width: 180px;
+  margin-top: 0;
+  margin-right: auto;
+  margin-left: auto;
+  /*padding: 16px;*/
+  -webkit-align-self: center;
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
+  align-self: center;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #14c871;
+  border-radius: 4px;
+  background-color: transparent;
+  -webkit-transition: all .4s ease;
+  transition: all .4s ease;
+  color: #14c871;
+  font-size: 16px;
+  font-weight: 500;
+  text-align: center;
+  letter-spacing: .5px;
+}
+
 
 @media (max-width: 991px) {
   #header {
@@ -116,10 +145,10 @@ h1, h2, h3, h4, h5, h6 {
 .nav-menu a {
   display: block;
   position: relative;
-  color: #5f687b;
+  color: #000;
   transition: 0.3s;
-  font-size: 14px;
-  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  font-family: "Inter", sans-serif;
 }
 
 .nav-menu a:hover, .nav-menu .active > a, .nav-menu li:hover > a {
@@ -348,11 +377,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero h1 {
-  margin: 0;
-  font-size: 48px;
+  margin-top: 0;
+  margin-bottom: 8px;
+  font-family: Inter,sans-serif;
+  color: #000;
+  font-size: 40px;
+  line-height: 1.2;
   font-weight: 700;
-  line-height: 56px;
-  color: #3e4450;
 }
 
 #hero h2 {
@@ -361,8 +392,71 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 24px;
 }
 
+#hero .c-heading-1 {
+  display: inline-block;
+  max-width: 800px;
+  margin-top: 24px;
+  margin-bottom: 24px;
+  font-family: Inter,sans-serif;
+  color: #000;
+  font-size: 54px;
+  line-height: 1.3;
+  font-weight: 400;
+  text-align: left;
+}
+
+#hero .c-heading-1.is--bold {
+  font-weight: 700;
+}
+#hero .c-heading-1.is--bold.is--green {
+  display: inline;
+  margin-top: 0;
+  margin-bottom: 0;
+  color: #16df7e;
+  text-align: left;
+}
+
+#hero p {
+  margin-bottom: 16px;
+  font-family: Inter,sans-serif;
+  color: #000;
+  font-size: 16px;
+  line-height: 1.6;
+  font-weight: 300;
+}
+
+#hero .c-paragraph {
+  display: block;
+  margin-bottom: 16px;
+  float: none;
+  clear: none;
+  -webkit-align-self: auto;
+  -ms-flex-item-align: auto;
+  -ms-grid-row-align: auto;
+  align-self: auto;
+  font-family: Inter,sans-serif;
+  color: #000;
+  font-size: 18px;
+  line-height: 1.6;
+  font-style: normal;
+  font-weight: 300;
+  letter-spacing: -.015em;
+  -o-object-fit: fill;
+  object-fit: fill;
+}
+
+#hero .c-paragraph.is--large {
+  font-family: Inter,sans-serif;
+  font-size: 24px;
+  font-weight: 300;
+}
+
+#hero .c-paragraph.is--large.is--bold {
+  font-weight: 500;
+}
+
 #hero .btn-get-started {
-  font-family: "Raleway", sans-serif;
+  font-family: "Inter", sans-serif;
   font-weight: 500;
   font-size: 16px;
   letter-spacing: 1px;
@@ -613,7 +707,7 @@ section {
 .counts .counters p {
   padding: 0;
   margin: 0 0 20px 0;
-  font-family: "Raleway", sans-serif;
+  font-family: "Inter", sans-serif;
   font-size: 14px;
   font-weight: 600;
 }
@@ -626,7 +720,10 @@ section {
   border: 1px solid #fff;
   padding: 80px 20px;
   transition: all ease-in-out 0.3s;
-  background: #fff;
+  /*background: #f9f9fe;*/
+  border-color: #16df7e;
+  border-radius: 4px;
+  border-width: 2px;
 }
 
 .services .icon-box .icon {
@@ -751,6 +848,27 @@ section {
   bottom: 20px;
 }
 
+#portfolio .c-heading-2 {
+  margin-top: 0;
+  margin-bottom: 24px;
+  font-family: Inter,sans-serif;
+  color: #000;
+  font-size: 40px;
+  line-height: 1.3;
+  font-weight: 500;
+  text-align: center;
+}
+
+#portfolio h2 {
+  margin-top: 24px;
+  margin-bottom: 16px;
+  font-family: Inter,sans-serif;
+  color: #000;
+  font-size: 18px;
+  line-height: 36px;
+  font-weight: 600;
+}
+
 /*--------------------------------------------------------------
 # Testimonials
 --------------------------------------------------------------*/
@@ -854,7 +972,7 @@ section {
 }
 
 .cta .cta-btn {
-  font-family: "Raleway", sans-serif;
+  font-family: "Inter", sans-serif;
   text-transform: uppercase;
   font-weight: 500;
   font-size: 16px;
@@ -1264,7 +1382,7 @@ section {
   font-weight: 700;
   color: #5f687b;
   position: relative;
-  font-family: "Poppins", sans-serif;
+  font-family: "Inter", sans-serif;
   padding-bottom: 0;
   margin-bottom: 0;
 }
