--- a/user_panel/templates/registration/login.html
+++ b/user_panel/templates/registration/login.html
@@ -8,40 +8,22 @@
         <div class="section-title">
             <h2>Iniciar sesión</h2>
         </div>
-        <div class="row align-items-center">
-                {% if user is None %}
-                    <div class="card">
-                        <div class="card-header">
-                            <h4>Credenciales invalidas :(</h4>
+        <div class="login-card">
+            <form class="card" method="post" enctype="multipart/form-data">
+                <div class="card-body" >
+                    {% csrf_token %}
+                    <div class="form-row">
+                        <div class="form-group">
+                            {{ form.username }}
                         </div>
-                        <div class="card-body">
-                        <h5 class="card-title">Intente nuevamente</h5>
-                        
-                        <a href="/pr/login" class="btn btn-primary">Intentar de nuevo</a>
+                        <div class="form-group">
+                            {{ form.password }}
                         </div>
                     </div>
-                {% elif not has_submitted %}
-                    <form class="card" method="post" enctype="multipart/form-data" style="width: 24rem;">
-                        <div class="card-body" >
-                            {% csrf_token %}
-                            <div class="form-row">
-                                <div class="form-group col-md-6">
-                                    {{ form.username }}
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                {{ form.password }}
-                            </div>
-                            <div class="form-group">
-                                <a href="/pr/register">Registrar nuevo usuario</a>
-                            </div>
-                            <button class="btn btn-primary" type="submit">Iniciar Sesión</button>
-                        </div>
-                    </form>
-                {% endif %}
-                
-            </div>
+                    <button class="btn btn-primary" type="submit">Iniciar Sesión</button>
+                </div>
+            </form>
         </div>
-    </div>
+    </div> 
 </section>
 {% endblock %}
