--- a/landing/templates/header.html
+++ b/landing/templates/header.html
@@ -1,25 +1,31 @@
 {% block header %}
 
 <header id="header" class="fixed-top">
-    <div class="container d-flex align-items-center">
+  <div class="container d-flex align-items-center">
 
-      <h1 class="logo mr-auto"><a href="/">Cactus Co.</a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+    <h1 class="logo mr-auto"><a href="/">Cactus Co.</a></h1>
+    <!-- Uncomment below if you prefer to use an image logo -->
+    <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
-      <nav class="nav-menu d-none d-lg-block">
-        <ul>
-          <li class="active"><a href="#hero">Home</a></li>
-          <li><a href="#services">Como Funciona</a></li>
-          <li><a href="#contact">Contacto</a></li>
-          <li><a href="/accounts/logout/?next=/pr">Ingresa!</a></li>
-          <!-- <li><a href="/pr/register">Registrate</a></li>para mas adelante -->
+    <nav class="nav-menu d-none d-lg-block">
+      <ul>
+        <li class="nav-menu active"><a href="/#hero">Home</a></li>
+        <li><a class="nav-menu" href="/#portfolio">Como Funciona</a></li>
+        <li><a class="nav-menu" href="/#contact">Contacto</a></li>
+        {% if request.user.is_authenticated %}
+        <li><a class="get-started-btn" href="/user">Tu sitio</a></li>
+        <li><a class="get-started-btn" href="/accounts/logout/?next=/">Cerrar Sesión</a></li>
+        <!-- <li><a href="/pr/register">Registrate</a></li>para mas adelante -->
+        {% else %}
+        <li><a class="get-started-btn" href="/accounts/login/?next=/user">Tu sitio</a></li>
+        {% endif %}
+      </ul>
+    </nav><!-- .nav-menu -->
 
-        </ul>
-      </nav><!-- .nav-menu -->
+    <!-- <a href="#contact" class="get-started-btn scrollto">Get Started</a> -->
 
-      <!-- <a href="#contact" class="get-started-btn scrollto">Get Started</a> -->
+  </div>
+</header><!-- End Header -->
 
-    </div>
-  </header><!-- End Header -->
+  
 {% endblock %}
