--- a/landing/templates/landing.html
+++ b/landing/templates/landing.html
@@ -5,5 +5,6 @@
 {% include "sections/example.html" %}
 {% include "sections/portfolio.html" %}
 {% include "sections/contact.html" %}
+{% include "sections/suscription.html" %}
 
 {% endblock %}
