--- a/user_panel/templates/sections/welcome.html
+++ b/user_panel/templates/sections/welcome.html
@@ -1,12 +1,15 @@
 {% block welcome %}
-<br><br><br><br><br><br><br><br>
-<h2>Área para miembros</h2>
+<br><br><br><br><br>
+<div class="container">
+    <h2>Área de usuario</h2>
 
-<p>
-    Bienvenido <b>{{request.user.username}}</b>, 
-    esta página es exclusiva para usuarios registrados.
-</p>
+    <p>
+        Bienvenido <strong class="capitalize">{{request.user.username}}</strong>, 
+        esta página es exclusiva para usuarios registrados.
+    </p>
 
-<hr />
-<a href="/accounts/logout/?next=/">Cerrar sesión</a>
+    <hr />
+    <a href="/accounts/logout/?next=/">Cerrar sesión</a>
+</div>
+
 {% endblock %}
