--- a/user_panel/templates/sections/welcome.html
+++ b/user_panel/templates/sections/welcome.html
@@ -1,5 +1,11 @@
 {% block welcome %}
 <br><br><br><br><br>
+<!-- ======= Sidebar para despues =======
+<div class="sidebar">
+    <a href="Home">Home</a>
+    <a href=""></a>
+</div>
+ -->
 <div class="container">
     <h2>Área de usuario</h2>
 
