--- a/landing/templates/header.html
+++ b/landing/templates/header.html
@@ -9,19 +9,18 @@
 
     <nav class="nav-menu d-none d-lg-block">
       <ul>
-        <li class="nav-menu active"><a href="/#hero">Home</a></li>
-        <li><a class="nav-menu" href="/#portfolio">Como Funciona</a></li>
-        <li><a class="nav-menu" href="/#contact">Contacto</a></li>
-        {% if request.user.is_authenticated %}
-        <li><a class="get-started-btn" href="/user">Tu sitio</a></li>
-        <li><a class="get-started-btn" href="/accounts/logout/?next=/">Cerrar Sesión</a></li>
-        <!-- <li><a href="/pr/register">Registrate</a></li>para mas adelante -->
-        {% else %}
-        <li><a class="get-started-btn" href="/accounts/login/?next=/user">Tu sitio</a></li>
-        {% endif %}
+        <li class="active"><a href="/#hero">Home</a></li>
+        <li><a href="/#portfolio">Como Funciona</a></li>
+        <li><a href="/#contact">Contacto</a></li>
       </ul>
     </nav><!-- .nav-menu -->
-
+    {% if request.user.is_authenticated %}
+    <a class="get-started-btn" href="/user">Tu sitio</a>
+    <a class="get-started-btn" href="/accounts/logout/?next=/">Cerrar Sesión</a>
+    <!-- <li><a href="/pr/register">Registrate</a></li>para mas adelante -->
+    {% else %}
+    <a class="get-started-btn" href="/accounts/login/?next=/user">Tu sitio</a>
+    {% endif %}
     <!-- <a href="#contact" class="get-started-btn scrollto">Get Started</a> -->
 
   </div>
