--- a/landing/templates/header.html
+++ b/landing/templates/header.html
@@ -19,7 +19,7 @@
     <a class="get-started-btn" href="/accounts/logout/?next=/">Cerrar Sesión</a>
     <!-- <li><a href="/pr/register">Registrate</a></li>para mas adelante -->
     {% else %}
-    <a class="get-started-btn" href="/accounts/login/?next=/user">Tu sitio</a>
+    <a class="get-started-btn" href="/accounts/login/?next=/user">Ingresa</a>
     {% endif %}
     <!-- <a href="#contact" class="get-started-btn scrollto">Get Started</a> -->
 
