--- a/static/css/style.css
+++ b/static/css/style.css
@@ -218,7 +218,7 @@ h1, h2, h3, h4, h5, h6 {
   border: 1px solid #cdd1d9;
 }
 
-.nav-menu .get-started-btn:hover {
+.get-started-btn:hover {
   background: #206bfb;
   color: #fff;
   border-color: #206bfb;
@@ -1378,7 +1378,12 @@ section {
   position: relative;
   max-width: 300px;
   margin: auto;
+  width: 100%;
+  border-top: 3px solid #16df7e;
+  border-bottom: 3px solid #16df7e;
+  background-color: #f9f9fa;
 }
+
 
 /*--------------------------------------------------------------
 # Sidebar
