--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1384,6 +1384,35 @@ section {
   background-color: #f9f9fa;
 }
 
+#id_username, #id_password {
+  margin: auto;
+  width: 100%;
+  height: 44px;
+  box-shadow: none;
+  font-size: 14px;
+  border-radius: 4px;
+  display: block;
+  width: 100%;
+  height: calc(1.5em + .75rem + 2px);
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: .25rem;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+#id_username:focus textarea:focus, #id_password:focus textarea:focus {
+  outline: none !important;
+  border-color: #16df7e !important;
+  border: 1px solid #16df7e !important;
+  border-radius: .25rem;
+  
+}
 
 /*--------------------------------------------------------------
 # Sidebar
