--- a/user_panel/templates/sections/welcome.html
+++ b/user_panel/templates/sections/welcome.html
@@ -1,11 +1,11 @@
 {% block welcome %}
-<br><br><br><br><br>
 <!-- ======= Sidebar para despues =======
 <div class="sidebar">
     <a href="Home">Home</a>
     <a href=""></a>
 </div>
  -->
+<section id="user-area" class="pt-12">
 <div class="container">
     <h2>Área de usuario</h2>
 
@@ -16,5 +16,5 @@
 
     <hr />
 </div>
-
+</section>
 {% endblock %}
